    - fixed problem with newline at the end of included templates (Monte, Andrei)
    - added feature to regenerate cache if compile_check is enabled and an
      involved template or config file gets modified (Monte)
    - added DEBUG execution times to included files (Monte)
    - added support for hidden config variables that cannot be read by
      templates. (Andrei)
    - added execution time to DEBUG console, total and inserts. (Monte)
    - fixed bug where DEBUG console would not appear with cached content. (Monte)
    - added support for postfilter functions that are applied to compiled
      template right after compilation. (Andrei)
    - fixed the name of clear_compile_tpl() API function to clear_compiled_tpl.
      (Andrei)
    - added fix for removing comments so that the line numbers are reported
      correctly in case of errors. (patch from Anders Janson)
    - made html_options output xhtml compatible code. (Monte, Arnaud Limbourg)

Version 1.4.5
-------------
    - update FAQ with index of questions at the top
    - update overlib to 3.50, adjust addon code so that the overlib.js
      file isn't modified, and not using the mini one. (Monte)
    - added many more options to html_select_date. (Alexander Skwar, Andrei)
    - added support for generating different compiled templates from the same
      source template. (Hans-Peter Oeri, Andrei)
    - modified Smarty to pass itself to insert functions as the second
      parameter. (Andrei)
    - modified Smarty to pass itself to prefilter functions as the second
      parameter. (Andrei)
    - fixed syntax error when including a non-existant template with security
      enabled. (Monte)
    - fixed comments handling to allow commenting out template blocks. (Andrei)
    - implemented named capture buffers, with results accessible via
      $smarty.capture.<name>. (Andrei)
    - added ability to index arrays directly by numbers. (Andrei)